# fltk

./: .clang-format  .clang-tidy  .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  ANNOUNCEMENT  CHANGES  CHANGES.txt  CHANGES.txt~  CHANGES_1.0  CHANGES_1.0.txt  CHANGES_1.1  CHANGES_1.1.txt  CHANGES_1.3  CHANGES_1.3.txt  CMakeLists.txt  CMakeSettings.json  COPYING  CREDITS  CREDITS.txt  DartConfig.cmake  Doxyfile  Hub game  KNOWN_BUGS.html  Makefile  README  README.123  README.Android.md  README.Android.txt  README.CMake.md  README.CMake.txt  README.CMake_build  README.CMake_use  README.CPack.txt  README.Cairo.md  README.Cairo.txt  README.IDE.txt  README.MSWindows.txt  (+49 more)
branch-1.1/fluid/: CMakeLists.txt  CodeEditor.cxx  Fl_Function_Type.cxx  Fl_Group_Type.cxx  Fl_Type.cxx  Fl_Widget_Type.cxx  Fl_Widget_Type.h  about_panel.fl  align_widget.cxx  comments.h  factory.cxx  file.cxx  fluid.cxx  fluid.desktop  makedepend  makefile.wat  print_panel.fl  template_panel.cxx  template_panel.h  undo.h  widget_panel.h
branch-1.1/png/: CHANGES  CMakeLists.txt  KNOWNBUG  png.c  (+9 more)
cairo/: CMakeLists.txt  Fl_Cairo.cxx  Makefile  cairo_dummy.c  makedepend
documentation/: .cvsignore  .gitignore  CHANGES  CMakeLists.txt  Doxybook  Doxyfile  Doxyfile.in  Fl.html  Fl_Adjuster.html  Fl_BMP_Image.html  Fl_Bitmap.html  Fl_Box.html  Fl_Browser.html  Fl_Browser_.html  Fl_Button.html  Fl_Chart.html  Fl_Check_Browser.html  Fl_Check_Button.html  Fl_Choice.html  Fl_Clock.html  Fl_Clock_Output.html  Fl_Color_Chooser.html  Fl_Counter.html  Fl_Dial.html  Fl_Double_Window.html  Fl_End.html  Fl_FileBrowser.html  Fl_FileChooser.html  Fl_FileIcon.html  Fl_File_Browser.html  Fl_File_Chooser.html  Fl_File_Icon.html  Fl_File_Input.html  Fl_Float_Input.html  Fl_Free.html  Fl_GIF_Image.html  Fl_Gl_Window.html  Fl_Group.html  Fl_HelpDialog.html  Fl_HelpView.html  (+121 more)
examples/: .gitignore  CMakeLists.txt  Makefile  Makefile.FLTK  OpenGL3-glut-test.cxx  OpenGL3test.cxx  README.examples  README.txt  SVG_File_Surface.cxx  animgifimage-play.cxx  animgifimage-resize.cxx  animgifimage-simple.cxx  animgifimage.cxx  browser-simple.cxx  cairo-draw-x.cxx  callbacks.cxx  chart-simple.cxx  clipboard.cxx  draggable-group.cxx  fltk-versions.cxx  fluid-callback.fl  grid-simple.cxx  howto-add_fd-and-popen.cxx  howto-browser-with-icons.cxx  howto-drag-and-drop.cxx  howto-draw-an-x.cxx  howto-flex-simple.cxx  howto-menu-with-images.cxx  howto-parse-args.cxx  howto-remap-numpad-keyboard-keys.cxx  howto-simple-svg.cxx  howto-text-over-image-button.cxx  menubar-add.cxx  nativefilechooser-simple-app.cxx  nativefilechooser-simple.cxx  progress-simple.cxx  shapedwindow.cxx  simple-terminal.cxx  table-as-container.cxx  table-simple.cxx  (+17 more)
fltk-options/: .gitignore  CMakeLists.txt  Makefile  fltk-options-shared.plist  fltk-options.cxx  fltk-options.desktop  fltk-options.plist  fltk-options.xml  makedepend
fluid/: .clang-tidy  .cvsignore  .gitignore  CMakeLists.txt  CodeEditor.cxx  CodeEditor.h  Doxyfile  Doxyfile-dev  ExternalCodeEditor_UNIX.cxx  ExternalCodeEditor_UNIX.h  ExternalCodeEditor_WIN32.cxx  ExternalCodeEditor_WIN32.h  Fd_Snap_Action.cxx  Fd_Snap_Action.h  Fl_Button_Type.cxx  Fl_Button_Type.h  Fl_Function_Type.cxx  Fl_Function_Type.h  Fl_Grid_Type.cxx  Fl_Grid_Type.h  Fl_Group_Type.cxx  Fl_Group_Type.h  Fl_Menu_Type.cxx  Fl_Menu_Type.h  Fl_Type.cxx  Fl_Type.h  Fl_Widget_Type.cxx  Fl_Widget_Type.h  Fl_Window_Type.cxx  Fl_Window_Type.h  Fluid.cxx  Fluid.h  Fluid_Image.cxx  Fluid_Image.h  Makefile  Project.cxx  Project.h  README  README_fd.txt  README_fl.txt  (+113 more)
jpeg/: CMakeLists.txt  Makefile  fltk_jpeg_prefix.h  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jconfig.h  jcparam.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdarith.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdct.h  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdpostct.c  jdsample.c  jdtrans.c  jerror.c  jerror.h  (+19 more)
package/: CMakeLists.txt
png/: ANNOUNCE  CHANGES  CMakeLists.txt  INSTALL  KNOWNBUG  LICENSE  Makefile  README  Y2KINFO  libpng-manual.txt  libpng.3  libpng.txt  libpngpf.3  makedepend  makefile.wat  png.5  png.c  png.h  pngconf.h  pngerror.c  pngget.c  pnglibconf.h  pngmem.c  pngpread.c  pngprefix.h  pngpriv.h  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
screenshots/: CMakeLists.txt  README.txt  unicode.cxx
src/: .cvsignore  CMakeLists.txt  Fl.cxx  Fl_Abstract_Printer.cxx  Fl_Adjuster.cxx  Fl_Anim_GIF_Image.cxx  Fl_BMP_Image.cxx  Fl_Bitmap.cxx  Fl_Box.cxx  Fl_Browser.cxx  Fl_Browser_.cxx  Fl_Browser_load.cxx  Fl_Button.cxx  Fl_Cairo.cxx  Fl_Chart.cxx  Fl_Check_Browser.cxx  Fl_Check_Button.cxx  Fl_Choice.cxx  Fl_Clock.cxx  Fl_Color_Chooser.cxx  Fl_Copy_Surface.cxx  Fl_Counter.cxx  Fl_Device.cxx  Fl_Dial.cxx  Fl_Double_Window.cxx  Fl_FileBrowser.cxx  Fl_FileChooser.cxx  Fl_FileChooser.fl  Fl_FileChooser2.cxx  Fl_FileIcon.cxx  Fl_File_Browser.cxx  Fl_File_Chooser.cxx  Fl_File_Chooser.fl  Fl_File_Chooser2.cxx  Fl_File_Icon.cxx  Fl_File_Icon2.cxx  Fl_File_Input.cxx  Fl_Flex.cxx  Fl_Font.H  Fl_GDI_Printer.cxx  (+279 more)
test/: .cvsignore  .gitignore  CMakeLists.txt  CubeMain.cxx  CubeView.cxx  CubeView.h  CubeViewUI.fl  Makefile  README  README-unittests.txt  README.txt  adjuster.cxx  animated.cxx  animgifimage.cxx  arc.cxx  ask.cxx  bitmap.cxx  blocks.cxx  boxtype.cxx  browser.cxx  browserop.cxx  button.cxx  buttons.cxx  cairo_test.cxx  checkers.cxx  checkers.desktop  checkers_pieces.fl  clipboard.cxx  clock.cxx  colbrowser.cxx  color_chooser.cxx  connect.cxx  contrast.cxx  coordinates.cxx  cube.cxx  cursor.cxx  curve.cxx  demo.cxx  demo.menu  demo.menu.in  (+181 more)
util/: CMakeLists.txt  README.txt  cmap.cxx  code_snapshot.cxx
zlib/: CMakeLists.txt  ChangeLog  Makefile  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzguts.h  gzio.c  gzread.c  inflate.c  inftrees.c  makedepend  makefile.wat  trees.c  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
(+3816 files in other folders)
